--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ section {
 
 .Skills-details-container {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   flex-direction: column;
 }
 
@@ -339,7 +339,7 @@ section {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 2.5rem;
-  justify-content: space-around;
+  justify-content: left;
 }
 
 article {
@@ -351,6 +351,8 @@ article {
 
 article .icon {
   cursor: default;
+  justify-content: left;
+  display: flex;
 }
 
 /* PROJECTS SECTION */
