--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ a:hover {
 
 #hamburger-nav {
   display: none;
+  justify-content: flex-end;
 }
 
 .hamburger-menu {
@@ -90,7 +91,7 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   width: fit-content;
   max-height: 0;
   overflow: hidden;
